--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
 "profilePictureName": "posterwall.png", 
-"overlaySource": "assets/img/rahmen/image.png", 
+"overlaySource": "assets/img/twibbon/image.png", 
 "backgroundColor": "#e7e7e7", 
 "rootElementId": "app", 
 "logoSources": [
