--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
-"profilePictureName": "posterwall.png", 
+"profilePictureName": "bera.pages.dev.png", 
 "overlaySource": "assets/img/twibbon/image.png", 
 "backgroundColor": "#e7e7e7", 
 "rootElementId": "app", 
