--- a/config/config.json
+++ b/config/config.json
@@ -18,8 +18,8 @@
 "done": "Twibbon berhasil dibuat!"
 }, 
 "buttons": {
-"download": "Download", 
-"newImage": "Hapus"
+"download": "DOWNLOAD", 
+"newImage": "HAPUS"
 }
 }
 }
